Fixed *.json dependencies list. Added a test function, and verified module loading was working.
More tests will need to be written, but the overall module functions simply enough right now. Testing not done for emitting events, and checking callbacks.

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "neat"
   ],
   "repo": "OptimusLime/win-backbone",
-  "main": "lib/win-backbone.js"
+  "main": "lib/win-backbone.js",
   "dependencies" : {
     "component/emitter" : "*"
   }
