--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "win-backbone",
-  "version": "0.0.2-9",
+  "version": "0.0.3",
   "description": "The control backbone for WIN, handles message passing between modules in an experiment. Allows for somewhat generic module swapping",
   "keywords": [
     "WIN",
