--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "win-backbone",
-  "version": "0.0.3",
+  "version": "0.0.3-1",
   "description": "The control backbone for WIN, handles message passing between modules in an experiment. Allows for somewhat generic module swapping",
   "keywords": [
     "WIN",
@@ -15,5 +15,8 @@
   "main": "lib/win-backbone.js",
   "dependencies": {
     "component-emitter": "*"
+  },
+  "devDependencies": {
+    "colors": "*"
   }
 }
